[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | .eggs
  | build
)/
'''

[tool.mypy]
files = "src/simplify"
pretty = true
show_error_context = true
show_error_codes = true
# strict = true
# disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
strict_equality = true
no_implicit_optional = true
ignore_missing_imports = true
