[metadata]
name = simplify-hep
version = 0.1.3
author = Eric Schanet
description = Produce simplified likelihoods of different formats
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause
license_file = LICENSE
project_urls =
    Source = https://github.com/eschanet/simplify
    Tracker = https://github.com/eschanet/simplify/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    pyhf[minuit]>=0.5.3  # paramset.suggested_fixed
    boost_histogram
    awkward1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    simplify = simplify.cli:simplify

[tool:pytest]
addopts = --cov=simplify --cov-report html --cov-report term-missing --cov-branch -rsx --typeguard-packages=simplify
filterwarnings =
    ignore::DeprecationWarning:uproot:
    ignore:no type annotations present:UserWarning:typeguard:

[flake8]
max-complexity = 12
max-line-length = 88
count = True
statistics = True
import-order-style = google
application-import-names = simplify
per-file-ignores =
    example.py: T

[mypy]
files = src/simplify
pretty = True
show_error_context = True
show_error_codes = True
# strict = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_redundant_casts = True
warn_return_any = False
warn_unreachable = True
strict_equality = True
no_implicit_optional = True

[mypy-boost_histogram]
ignore_missing_imports = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-uproot4]
ignore_missing_imports = True

[mypy-awkward1]
ignore_missing_imports = True

[mypy-pyhf]
ignore_missing_imports = True

[mypy-matplotlib]
ignore_missing_imports = True

[mypy-matplotlib.pyplot]
ignore_missing_imports = True

[mypy-iminuit]
ignore_missing_imports = True

[mypy-jsonschema]
ignore_missing_imports = True

[mypy-scipy]
ignore_missing_imports = True

[mypy-scipy.optimize]
ignore_missing_imports = True

[mypy-scipy.stats]
ignore_missing_imports = True

[pytype]
inputs = src/simplify
