[metadata]
name = simplify
version = 0.1.9
author = Eric Schanet
description = Produce simplified likelihoods of different formats
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause
license_file = LICENSE
project_urls =
    Source = https://github.com/eschanet/simplify
    Tracker = https://github.com/eschanet/simplify/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    pyhf[minuit]>=0.6.3
    boost_histogram
    awkward1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    simplify = simplify.cli:simplify

[tool:pytest]
addopts = --cov=simplify --cov-report html --cov-report term-missing --cov-branch -rsx --typeguard-packages=simplify
filterwarnings =
    ignore::DeprecationWarning:uproot:
    ignore:no type annotations present:UserWarning:typeguard:

[flake8]
max-complexity = 12
max-line-length = 88
count = True
statistics = True
import-order-style = google
application-import-names = simplify
per-file-ignores =
    example.py: T

[pytype]
inputs = src/simplify
